--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "eslint-plugin-react": "^2.6.4",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.7",
-    "webpack": "^1.10.0",
-    "webpack-dev-server": "^1.10.1"
+    "webpack": "^2.3.1"
   }
 }
